@@ -1,7 +1,9 @@
 'use strict'
 
 const semver = require('semver')
+
 const { getDBDestination } = require('../context')
+const shimmer = require('../shimmer')
 
 // Match expected `<hostname>:<port>`, e.g. "mongo:27017", "::1:27017",
 // "127.0.0.1:27017".
@@ -14,25 +16,30 @@ module.exports = (mongodb, agent, { version, enabled }) => {
     return mongodb
   }
 
+  const ins = agent._instrumentation
+
   const activeSpans = new Map()
   if (mongodb.instrument) {
     const listener = mongodb.instrument()
-
     listener.on('started', onStart)
     listener.on('succeeded', onEnd)
     listener.on('failed', onEnd)
   } else if (mongodb.MongoClient) {
     // mongodb 4.0+ removed the instrument() method in favor of
-    // listeners on the instantiated client objects.
-    class MongoClient extends mongodb.MongoClient {
+    // listeners on the instantiated client objects. There are two mechanisms
+    // to get a client:
+    // 1. const client = new mongodb.MongoClient(...)
+    // 2. const client = await MongoClient.connect(...)
+    class MongoClientTraced extends mongodb.MongoClient {
       constructor () {
-        // The `command*` events are only sent if `monitorCommands: true`.
-        if (!arguments[1]) {
-          arguments[1] = { monitorCommands: true }
-        } else if (arguments[1].monitorCommands !== true) {
-          arguments[1] = Object.assign({}, arguments[1], { monitorCommands: true })
+        // The `command*` events are only emitted if `options.monitorCommands: true`.
+        const args = Array.prototype.slice.call(arguments)
+        if (!args[1]) {
+          args[1] = { monitorCommands: true }
+        } else if (args[1].monitorCommands !== true) {
+          args[1] = Object.assign({}, args[1], { monitorCommands: true })
         }
-        super(...arguments)
+        super(...args)
         this.on('commandStarted', onStart)
         this.on('commandSucceeded', onEnd)
         this.on('commandFailed', onEnd)
@@ -44,12 +51,52 @@ module.exports = (mongodb, agent, { version, enabled }) => {
       {
         enumerable: true,
         get: function () {
-          return MongoClient
+          return MongoClientTraced
         }
       }
     )
+    shimmer.wrap(mongodb.MongoClient, 'connect', wrapConnect)
+  } else {
+    agent.logger.warn('could not instrument mongodb@%s', version)
   }
   return mongodb
+
+  // Wrap the MongoClient.connect(url, options?, callback?) static method.
+  // It calls back with `function (err, client)` or returns a Promise that
+  // resolves to the client.
+  // https://github.com/mongodb/node-mongodb-native/blob/v4.2.1/src/mongo_client.ts#L503-L511
+  function wrapConnect (origConnect) {
+    return function wrappedConnect (url, options, callback) {
+      if (typeof options === 'function') {
+        callback = options
+        options = {}
+      }
+      options = options || {}
+      if (!options.monitorCommands) {
+        options.monitorCommands = true
+      }
+      if (typeof callback === 'function') {
+        return origConnect.call(this, url, options, function wrappedCallback (err, client) {
+          if (err) {
+            callback(err)
+          } else {
+            client.on('commandStarted', onStart)
+            client.on('commandSucceeded', onEnd)
+            client.on('commandFailed', onEnd)
+            callback(err, client)
+          }
+        })
+      } else {
+        const p = origConnect.call(this, url, options, callback)
+        p.then(client => {
+          client.on('commandStarted', onStart)
+          client.on('commandSucceeded', onEnd)
+          client.on('commandFailed', onEnd)
+        })
+        return p
+      }
+    }
+  }
 
   function onStart (event) {
     // `event` is a `CommandStartedEvent`
@@ -70,7 +117,7 @@ module.exports = (mongodb, agent, { version, enabled }) => {
       event.commandName
     ].join('.')
 
-    const span = agent.startSpan(name, 'db', 'mongodb', 'query')
+    const span = ins.createSpan(name, 'db', 'mongodb', 'query')
     if (span) {
       activeSpans.set(event.requestId, span)
 
