@@ -163,7 +163,7 @@
     "mimic-response": "^2.1.0",
     "mkdirp": "^0.5.1",
     "module-details-from-path": "^1.0.3",
-    "mongodb": "^4.1.0",
+    "mongodb": "^4.2.1",
     "mongodb-core": "^3.2.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
