@@ -52,6 +52,8 @@ Notes:
 
 * Fixes for run context handling for 'pg' instrumentation. ({issues}2430[#2430])
 
+* Fixes for run context handling for 'mongodb' instrumentation. ({issues}2512[#2512])
+
 
 [[release-notes-3.26.0]]
 ==== 3.26.0 2021/12/07
